--- a/Task1/views/layouts/main.hbs
+++ b/Task1/views/layouts/main.hbs
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    {{>main/head}}
+    {{>head}}
     <title>{{title}}</title>
 </head>
 <body>
 <div class="container d-flex">
-    {{>main/alert}}
+    {{>alert}}
     {{{body}}}
 </div>
 </body>
