Worked on task 1

--- a/Task1/views/layouts/main.hbs
+++ b/Task1/views/layouts/main.hbs
@@ -5,9 +5,11 @@
     <title>{{title}}</title>
 </head>
 <body>
-<div class="container d-flex">
+<div class="container-fluid d-flex h-100 flex-column">
     {{>alert}}
+    {{>info}}
     {{{body}}}
+    {{>chat}}
 </div>
 </body>
 </html>
