--- a/Task1/views/pages/rooms/a.hbs
+++ b/Task1/views/pages/rooms/a.hbs
@@ -1,8 +1,18 @@
 
 <div class="row flex-fill d-flex border border-success mx-3">
     <div class="col-12">
-        <p class="lead float-left">Game state: in room {{room}}</p>
-        <p class="lead float-right">Score: 0</p>
+        <div>
+            <p class="lead float-left">Game state:</p>
+            <p class="lead float-right" id="score_text"></p>
+        </div>
+        <div id="game_state">
+            <pre id="game_state_json"><!--
+                <code id="game_state_json">
+                    <br>
+                </code>-->
+            </pre>
+        </div>
+        <div class="col-12" id="game_area"></div>
     </div>
 </div>
 <div class="row mx-3 nav_links">
