--- a/Task1/views/pages/rooms/b.hbs
+++ b/Task1/views/pages/rooms/b.hbs
@@ -1,10 +1,19 @@
 
 <div class="row flex-fill d-flex border border-success mx-3">
     <div class="col-12">
-        <p class="lead float-left">Game state: in room {{room}}</p>
-        <p class="lead float-right">Score: 0</p>
-    </div>
-</div>
+        <div>
+            <p class="lead float-left">Game state:</p>
+            <p class="lead float-right" id="score_text"></p>
+        </div>
+        <div id="game_state">
+            <pre id="game_state_json"><!--
+                <code id="game_state_json">
+                    <br>
+                </code>-->
+            </pre>
+        </div>
+        <div class="col-12" id="game_area"></div>
+    </div></div>
 <div class="row mx-3 nav_links">
     <a href="/" class="btn btn-primary mr-2 mb-2 mt-2">Main</a>
     <a href="/a" class="btn btn-primary m-2">Room A</a>
