--- a/Task1/views/pages/rooms/main.hbs
+++ b/Task1/views/pages/rooms/main.hbs
@@ -1,11 +1,22 @@
 
 <div class="row flex-fill d-flex border border-success mx-3">
     <div class="col-12">
-        <p class="lead float-left">Game state: start</p>
-        <p class="lead float-right">Score: 0</p>
+        <div>
+            <p class="lead float-left">Game state:</p>
+            <p class="lead float-right" id="score_text"></p>
+        </div>
+        <div id="game_state">
+            <pre id="game_state_json"><!--
+                <code id="game_state_json">
+                    <br>
+                </code>-->
+            </pre>
+        </div>
+        <div class="col-12" id="game_area"></div>
     </div>
+
 </div>
-<div class="row mx-3 nav_links">
+<div class="row flex-fill mx-3 nav_links">
     <a href="/" class="btn btn-primary mr-2 mb-2 mt-2">Main</a>
     <a href="/a" class="btn btn-primary m-2">Room A</a>
     <a href="/b" class="btn btn-primary m-2">Room B</a>
