--- a/Task1/views/partials/info.hbs
+++ b/Task1/views/partials/info.hbs
@@ -2,7 +2,7 @@
     <div class="p-2 col-9">
         <h1 class="display-1">Room: {{room}}</h1>
     </div>
-    <div class="p-2">
+    <div class="p-2 col-3">
         <p class="lead">Highscores:</p>
         <table class="table">
             <thead>
@@ -12,8 +12,8 @@
                 <th scope="col">Score</th>
             </tr>
             </thead>
-            <tbody>
-            <tr>
+            <tbody id="highscore_table">
+<!--            <tr>
                 <th scope="row">1</th>
                 <td>Insert</td>
                 <td>Score</td>
@@ -22,8 +22,13 @@
                 <th scope="row">2</th>
                 <td>From</td>
                 <td>Localstorage</td>
-            </tr>
+            </tr>-->
             </tbody>
         </table>
+        <a href="" class="float-right btn btn-danger" id="clear_btn">Clear ALL users</a>
+    </div>
+    <div class="col-12 mb-2 ml-0">
+        <input type="text" placeholder="Enter your username..." id="username_input">
+        <a href="" class="btn btn-primary" id="username_btn">Enter</a>
     </div>
 </div>
