almost done with task 2

--- a/Task2/views/partials/chat.hbs
+++ b/Task2/views/partials/chat.hbs
@@ -1,13 +1,28 @@
-<div class="chat_area d-flex m-3 flex-column justify-content-between">
+<div class="chat_nav_area m-3 d-flex">
+    <div class="col-6" id="nav_area">
+        <div class="m-3" id="nav_messages">
+            <h3 class="display-5">Navigation</h3>
+            <p class="lead">Enter room name below to navigate to that room</p>
+            <p class="text-monospace text-muted">Valid entries: 'Main', 'A', 'B' or 'C' (case insensitive).</p>
+        </div>
 
+        <div class="m-3">
+            <input type="text" id="nav_input" class="flex-fill" placeholder="Enter message...">
+            <a href="" class="btn btn-primary flex-shrink-1" id="nav_send_message">Send</a>
+        </div>
+    </div>
+    <div class="col-6" id="chat_area">
     <div class="m-3" id="chat_messages">
-    <h3 class="display-3">Chat Navigation</h3>
-        <p class="lead">Enter room name below to navigate to that room</p>
-        <p class="text-monospace text-muted">Valid entries: 'Main', 'A', 'B' or 'C' (case insensitive).</p>
+        <h3 class="display-5">Chat</h3>
+        <div id="chat_window">
+            <div id="output">
+            </div>
+        </div>
     </div>
 
-    <div class="m-3 row">
+    <div class="m-3">
         <input type="text" id="chat_input" class="flex-fill" placeholder="Enter message...">
         <a href="" class="btn btn-primary flex-shrink-1" id="send_message">Send</a>
     </div>
+</div>
 </div>
