--- a/Task2/views/partials/info.hbs
+++ b/Task2/views/partials/info.hbs
@@ -1,6 +1,7 @@
 <div class="row mx-3">
     <div class="p-2 col-9">
         <h1 class="display-1">Room: {{room}}</h1>
+        <p>{{username}}</p>
     </div>
     <div class="p-2 col-3">
         <p class="lead">Highscores:</p>
@@ -30,5 +31,6 @@
     <div class="col-12 mb-2 ml-0">
         <input type="text" placeholder="Enter your username..." id="username_input">
         <a href="" class="btn btn-primary" id="username_btn">Enter</a>
+        <a href="/users/logout" class="btn btn-warning">logout</a>
     </div>
 </div>
