Done with task 2

--- a/Task2/views/pages/rooms/a.hbs
+++ b/Task2/views/pages/rooms/a.hbs
@@ -6,13 +6,18 @@
             <p class="lead float-right" id="score_text"></p>
         </div>
         <div id="game_state">
-            <pre id="game_state_json"><!--
-                <code id="game_state_json">
-                    <br>
-                </code>-->
+            <pre id="game_state_json">
             </pre>
         </div>
-        <div class="col-12" id="game_area"></div>
+        <div class="col-12" id="game_area">
+            <div class="row mx-3" id="state_change_div">
+                <a href="" class="btn btn-primary mx-1 stat_btn" id="inc_str">Increase Strength</a>
+                <a href="" class="btn btn-primary mx-1 stat_btn" id="inc_agi">Increase Agility</a>
+                <a href="" class="btn btn-primary mx-1 stat_btn" id="inc_stam">Increase Stamina</a>
+                <a href="" class="btn btn-primary mx-1 stat_btn" id="inc_int">Increase Intellect</a>
+
+            </div>
+        </div>
     </div>
 </div>
 <div class="row mx-3 nav_links">
