--- a/Task2/views/layouts/game.hbs
+++ b/Task2/views/layouts/game.hbs
@@ -10,6 +10,7 @@
     <div class="row mx-3">
         <div class="p-2 col-9">
             <h1 class="display-1">Room: {{room}}</h1>
+            <p id="user_hook">Logged in as: </p>
         </div>
     </div>
     {{{body}}}
