--- a/Task2/views/pages/rooms/c.hbs
+++ b/Task2/views/pages/rooms/c.hbs
@@ -6,10 +6,7 @@
             <p class="lead float-right" id="score_text"></p>
         </div>
         <div id="game_state">
-            <pre id="game_state_json"><!--
-                <code id="game_state_json">
-                    <br>
-                </code>-->
+            <pre id="game_state_json">
             </pre>
         </div>
         <div class="col-12" id="game_area"></div>
